# mp3_player

./: CMakeLists.txt  biup.sh  hw_config.c  sdcard.cpp
FatFs_SPI/sd_driver/: sd_card.c  sd_spi.c
lib/: CMakeLists.txt
lib/FatFs_SPI/ff15/source/: ffconf.h
lib/FatFs_SPI/sd_driver/: sd_spi.c  spi.c
lib/FatFs_SPI/src/: ff_stdio.c  glue.c
lib/libmad/: CMakeLists.txt  MP3DecoderMAD.h  config.h
libmad/: CMakeLists.txt  MP3DecoderMAD.h
src/: CMakeLists.txt  audiobuffer.cpp  audiobuffer.h  audiofile_reader.cpp  audiofile_reader.h  bbng.h  btn_handler.h  config.h  display.cpp  display.h  encoder.h  encoder.pio  filemanager.cpp  filemanager.h  font.h  gui.cpp  gui_filesystem.cpp  hw_config.c  i2s_dac.h  i2s_dac.pio  inputhandler.cpp  inputhandler.h  metadata.h  mp3_player.cpp  pins.h  player.cpp  player.h  playlistfile.cpp  playlistfile.h  queue.cpp  queue.h  util.h  utils.h
src/gui/: CMakeLists.txt  filesystem.cpp  filesystem.h  gui.cpp  gui.h  play.cpp  play.h
